Fix tools top and bottom margins on mobile.

--- a/src/styles/components/_hawk-results.scss
+++ b/src/styles/components/_hawk-results.scss
@@ -1,9 +1,9 @@
 .hawk-results__item {
-	max-width: 300px;
 	margin: 0 0 2em;
 	width: 100%;
 
 	@include md {
+		max-width: 300px;
 		width: 50%;
 	}
 
@@ -36,11 +36,21 @@
 }
 
 .hawk-results__top-tool-row {
+	margin-top: 2em;
 	margin-bottom: 1em;
 	border-bottom: 1px solid #ccc;
+
+	@include md {
+		margin-top: 0;
+	}
 }
 
 .hawk-results__bottom-tool-row {
 	margin-top: 1em;
+	padding-top: 1em;
 	border-top: 1px solid #ccc;
+
+	@include md {
+		padding-top: 0;
+	}
 }
